--- a/views/partials/nav.hbs
+++ b/views/partials/nav.hbs
@@ -27,7 +27,7 @@
                             <span class="userName">{{user.name}}</span>
                         </a>
                     </li>
-                    <li>
+                    <li style="height: 65px;">
                         <a href="#" class="btnLogout"><i class="material-icons right">power_settings_new</i></a>
                     </li>
                 </ul>
@@ -60,7 +60,7 @@
                 <input id="search_bar_mobile" type="search" placeholder="Search" class="browser-default"/>
                 <span class="searchIcons">
                     <i class="material-icons btnSearch inlineIcon" data-search_bar="#search_bar_mobile">search</i>
-                    <i class="material-icons btnSearch inlineIcon" id="btn_search_clear">clear</i>
+                    <i class="material-icons inlineIcon" id="btn_search_clear">clear</i>
                 </span>
             </div>
         </nav>
