--- a/views/partials/comments.hbs
+++ b/views/partials/comments.hbs
@@ -1,24 +1,27 @@
 {{#each post.comments}}
     <div class="userComment row">
-        <div class="col s5">
+        <div class="col s4">
             <a href="/users/{{this.id_user._id}}" class="">
-                <span class="left">
+                <span class="left" style="display:block; width: 100%;">
                     <img src="{{this.id_user.picture}}" alt="{{this.id_user.name}}" class="userImg circle responsive-img z-depth-2 left" height="30px" width="30px" />
-                    <div class="left userInfo hide-on-small-only">
+                    <div class="left userInfo">
                         <div class="userInfoData">{{this.id_user.name}}</div>
                         <div class="dateInfo commentDate truncate">{{#dateFormat this.date}}{{/dateFormat}}</div>
                     </div>
                 </span>
             </a>
         </div>
-        <div class="col s5" style="margin-left:-5%;">
+        <div class="col s7" style="margin-left:-5%;">
             <span>{{this.comment}}</span>
         </div>
 
         {{#ifCond this.owner_id '==' this.id_user._id}}
-            <div class="col s2 right">
-                <a href="#" class="btnCommentEdit" data-comment="{{this.comment}}" data-id="{{_id}}" data-index="{{@index}}" data-id_post="{{this.id_post}}"><i class="material-icons">mode_edit</i></a>
-                <a href="#" class="btnCommentDelete" data-id="{{_id}}" data-index="{{@index}}" data-id_post="{{this.id_post}}" data-date="{{this.date}}"><i class="material-icons">delete</i></a>
+            <ul id="commentEditDropdown_{{_id}}" class="dropdown-content">
+                <li><a href="#" class="btnCommentEdit" data-comment="{{this.comment}}" data-id="{{_id}}" data-index="{{@index}}" data-id_post="{{this.id_post}}"><i class="material-icons">mode_edit</i></a></li>
+                <li><a href="#" class="btnCommentDelete" data-id="{{_id}}" data-index="{{@index}}" data-id_post="{{this.id_post}}" data-date="{{this.date}}"><i class="material-icons">delete</i></a></li>
+            </ul>
+            <div class="col s1 right">
+                <a class="dropdown-button" href="#" data-activates="commentEditDropdown_{{_id}}"><i class="material-icons">expand_more</i></a>
             </div>
         {{/ifCond}}
     </div>
