--- a/views/partials/post.hbs
+++ b/views/partials/post.hbs
@@ -9,7 +9,7 @@
                         <i class="material-icons bookmark" data-id_bookmark="{{id_bookmark}}" data-id_post="{{id_post}}">bookmark_border</i>
                     {{/if}}
                 </span>
-                {{#ifCond ../user.id_user '==' this.id_user._id}}
+                {{#ifCond this.user_id '==' this.id_user._id}}
                     <ul id="editDropdown_{{_id}}" class="dropdown-content">
                         <li><a href="#" class="btnPostEdit" data-id_post="{{_id}}">Edit</a></li>
                         <li><a href="#" class="btnPostDelete" data-id_post="{{_id}}">Delete</a></li>
@@ -32,14 +32,14 @@
                     </div>
                 </div>
 
-                <p>{{#each tags}} <a href="/home/search/tag/{{this}}" class="chip tooltipped"  data-position="top" data-delay="50" data-tooltip="tag">{{this}}</a>{{/each}}</p>
+                <p style="height:32px;">{{#each tags}} <a href="/home/search/tag/{{this}}" class="chip tooltipped"  data-position="top" data-delay="50" data-tooltip="tag">{{this}}</a>{{/each}}</p>
                 <p>{{description}}</p>
                 <p class="row">
                     <a href="{{url}}" target="_blank">
                         <span class="col s4 postImg" style="background: url({{image}}) no-repeat center;"></span>
                         <span class="col s8">
                             <span class="truncate">{{title}}</span>
-                            <span class="customTruncate">{{preview_description}}</span>
+                            <span class="previewDescription">{{#truncate preview_description}}{{/truncate}}</span>
                         </span>
                     </a>
                 </p>
