--- a/views/partials/comments.hbs
+++ b/views/partials/comments.hbs
@@ -21,7 +21,7 @@
                 <li><a href="#" class="btnCommentDelete" data-id="{{_id}}" data-index="{{@index}}" data-id_post="{{this.id_post}}" data-date="{{this.date}}"><i class="material-icons">delete</i></a></li>
             </ul>
             <div class="col s1 right">
-                <a class="dropdown-button" href="#" data-activates="commentEditDropdown_{{_id}}"><i class="material-icons">expand_more</i></a>
+                <a class="dropdown-button commentdropdown-button" href="#" data-activates="commentEditDropdown_{{_id}}"><i class="material-icons">arrow_drop_down</i></a>
             </div>
         {{/ifCond}}
     </div>
