--- a/views/index.hbs
+++ b/views/index.hbs
@@ -265,7 +265,7 @@
         $('#search_form').on('submit', function(e) {
             e.preventDefault();
 
-            $('#btn_search').trigger('click');
+            $('.btnSearch').trigger('click');
         });
 
         $('#comment_form').on('submit', function(e) {
