--- a/views/layouts/main.hbs
+++ b/views/layouts/main.hbs
@@ -8,7 +8,7 @@
 	<meta name="viewport" content="width=device-width,initial-scale=1,maximum-scale=1">
     <link href="/images/favicon.png" rel="shortcut icon" type="image/png">
     <script src="/javascript/lib/jquery-1.11.3.min.js"></script>
-    <!-- script id="google_script" src="https://apis.google.com/js/platform.js?onload=onLoad" async defer></script-->
+    <script src="/socket.io/socket.io.js"></script>
     <script>
         // Asynchronously load the client library
         (function() {
