--- a/views/partials/comments.hbs
+++ b/views/partials/comments.hbs
@@ -5,7 +5,7 @@
                 <span class="left" style="display:block; width: 100%;">
                     <img src="{{this.id_user.picture}}" alt="{{this.id_user.name}}" class="userImg circle responsive-img z-depth-2 left" height="30px" width="30px" />
                     <div class="left userInfo">
-                        <div class="userInfoData">{{this.id_user.name}}</div>
+                        <div class="userInfoData truncate">{{this.id_user.name}}</div>
                         <div class="dateInfo commentDate truncate">{{#dateFormat this.date}}{{/dateFormat}}</div>
                     </div>
                 </span>
@@ -43,7 +43,7 @@
                 <div style="display:block; width: 100%;">
                     <img src="{{this.id_user.picture}}" alt="{{this.id_user.name}}" class="userImg circle responsive-img z-depth-2 left" height="50px" width="50px" />
                     <div class="left userInfo">
-                        <div class="userInfoData">{{this.id_user.name}}</div>
+                        <div class="userInfoData truncate">{{this.id_user.name}}</div>
                         <div class="dateInfo commentDate truncate">{{#dateFormat this.date}}{{/dateFormat}}</div>
                     </div>
                 </div>
