--- a/views/partials/post.hbs
+++ b/views/partials/post.hbs
@@ -24,7 +24,7 @@
                             <span class="left" style="width:100%">
                                 <img src="{{id_user.picture}}" alt="{{id_user.name}}" class="userImg circle responsive-img z-depth-2 left" height="35px" width="35px" />
                                 <div class="left userInfo">
-                                    <div class="userInfoData userName">{{id_user.name}}</div>
+                                    <div class="userInfoData userName truncate">{{id_user.name}}</div>
                                     <div class="dateInfo commentDate truncate">{{#dateFormat date_edited}}{{/dateFormat}}</div>
                                 </div>
                             </span>
