--- a/views/post.hbs
+++ b/views/post.hbs
@@ -71,6 +71,8 @@
 <script src="/javascript/lib/jquery-ui.min.js"></script>
 <script src="/javascript/lib/jquery.tag-editor.min.js"></script>
 <script src="/javascript/lib/jquery.caret.min.js"></script>
+<script src="/javascript/app/notification.js"></script>
+<script src="/javascript/app/common.js"></script>
 <script>
     function onLoad()
     {
