--- a/views/partials/nav.hbs
+++ b/views/partials/nav.hbs
@@ -2,7 +2,7 @@
     <div class="navbar-fixed">
         <nav class="blue darken-4">
             <div class="nav-wrapper">
-                <a href="/home" class="brand-logo center">KRDS Watch</a>
+                <a href="/home" class="brand-logo center headerTitle">KRDS Watch</a>
                 <ul class="left hide-on-med-and-down">
                     {{#each tabs}}
                         <li class="{{active}}">
@@ -27,8 +27,8 @@
                             <span class="userName">{{user.name}}</span>
                         </a>
                     </li>
-                    <li style="height: 65px;">
-                        <a href="#" class="btnNotifications" style="height:100%;"><i class="material-icons">public</i><span class="badge red darken-4 notificationCount">{{notification_count}}</span></a>
+                    <li style="height: 65px;" class="clickInActive">
+                        <a href="#" class="btnNotifications" style="height:100%;"><i class="material-icons clickInActive">public</i><span class="badge red darken-4 notificationCount clickInActive">{{notification_count}}</span></a>
                     </li>
                     <li style="height: 65px;">
                         <a href="#" class="btnLogout"><i class="material-icons">power_settings_new</i></a>
