--- a/views/partials/notification.hbs
+++ b/views/partials/notification.hbs
@@ -1,8 +1,8 @@
 {{#each notifications}}
-    <li data-id_post="{{id_post}}" class="{{#if is_seen}} light-blue lighten-5 {{else}}  blue lighten-5{{/if}} valign-wrapper">
-        <a href="#" class="valign-wrapper">
-            <img src="{{id_user.picture}}" alt="{{id_user.name}}" class="circle responsive-img  z-depth-3" height="45px" width="45px" />
-            <span>{{message}}</span>
+    <li data-id_post="{{id_post}}" class="{{#if is_seen}} light-blue lighten-5 {{else}}  blue lighten-5{{/if}} valign-wrapper clickInActive">
+        <a href="#" class="valign-wrapper clickInActive">
+            <img src="{{id_user.picture}}" alt="{{id_user.name}}" class="circle responsive-img  z-depth-3 clickInActive" height="45px" width="45px" />
+            <span class="clickInActive">{{message}}</span>
         </a>
     </li>
 {{/each}}
