--- a/public/stylesheet/index.css
+++ b/public/stylesheet/index.css
@@ -242,7 +242,7 @@ li.search {
     position: inherit;
 }
 
-nav ul a span.badge {
+.btnNotifications span.badge {
     position: relative;
     margin-left: 4px;
     line-height: 0;
@@ -251,11 +251,10 @@ nav ul a span.badge {
     color: white;
 }
 
-nav ul a span.badge:empty {
+.btnNotifications span.badge:empty {
     color: white;
     background-color: transparent !important;
 }
-
 
 /*Notifications*/
 .blockNotifications {
@@ -342,6 +341,57 @@ nav ul a span.badge:empty {
         position: relative;
         left: 10px;
     }
+
+    .btnNotifications {
+        margin-right: 5%;
+    }
+}
+
+/* Media query for tablet*/
+@media only screen and (min-width:321px) and (max-width:992px) {
+    .btnNotifications {
+        margin-right: 5%;
+    }
+}
+/*Media Query for mobile and Tabelt*/
+@media only screen and (max-width:992px) {
+
+    #main.animate {
+        animation: moveAside 1s;
+        animation-fill-mode: forwards;
+    }
+    #main.moveBack {
+        animation: moveBack 1s;
+        animation-fill-mode: forwards;
+    }
+    .notificationContainer:before {
+        content: none;
+    }
+
+    .blockNotifications {
+        position: inherit;
+    }
+
+    .notificationContainer {
+        width: 100%;
+        height: 100%;
+        max-height: 100%;
+    }
+
+    #btn_notificaiton_back {
+        margin-left: 5%;
+        margin-top: 5%;
+    }
+}
+
+@keyframes moveAside {
+    0% {transform: translateX(0%);}
+    100% {transform: translateX(-110%);}
+}
+
+@keyframes moveBack {
+    0% {transform: translateX(-110%);}
+    100% {transform: translateX(0%);}
 }
 
 /*Place Holder color Change*/
