--- a/views/partials/nav.hbs
+++ b/views/partials/nav.hbs
@@ -72,7 +72,9 @@
     </div>
 {{/ifCond}}
 <div id="block_notifications" class="blockNotifications light-blue lighten-5 defaultHidden">
-    <a href="#" id="btn_notificaiton_back" class="left hide-on-large-only"><i class="material-icons">arrow_back</i></a>
+    <div class="btnBackWrapper">
+        <a href="#" id="btn_notificaiton_back" class="left hide-on-large-only"><i class="material-icons">arrow_back</i></a>
+    </div>
     <ul class="notificationContainer" id="notification_container"></ul>
     <div class="progress" id="notification_loader">
         <div class="indeterminate"></div>
