--- a/views/post.hbs
+++ b/views/post.hbs
@@ -2,7 +2,7 @@
 <link rel="stylesheet" href="/stylesheet/jquery.tag-editor.css">
 <link rel="stylesheet" href="/stylesheet/jquery-ui.min.css">
 {{> nav this}}
-<div class="container" >
+<div class="container" id="main">
     <div class="row">
         <form class="col s12">
             <div class="row">
