--- a/views/post.hbs
+++ b/views/post.hbs
@@ -35,29 +35,29 @@
                 </div>
             </div>
             <div class="row">
-                <div class="input-field col s12">
+                <div class="input-field col s12 noOutline">
                     <input type="text" id="tags" name="tags" placeholder="Tags"/>
-                    <label for="tags">Tags</label>
                 </div>
             </div>
             <div class="row">
                 <div class="input-field col s12">
-                    <p>
-                        <input type="radio" name="highlight" id="highlight_yes" value="1" checked="false">
-                        <label for="highlight_yes">Yes</label>
-                    </p>
-                    <p>
-                        <input type="radio" name="highlight" id="highlight_no" value="0" checked="checked">
-                        <label for="highlight_no">No</label>
-                    </p>
+                    <span class="radioBlock">
+                        <span>
+                            <input type="radio" name="highlight" id="highlight_yes" value="1" checked="false">
+                            <label for="highlight_yes">Yes</label>
+                        </span>
+                        <span>
+                            <input type="radio" name="highlight" id="highlight_no" value="0" checked="checked">
+                            <label for="highlight_no">No</label>
+                        </span>
+                    </span>
                     <label for="highlight">Highlight</label>
                 </div>
             </div>
 
             <div class="row">
-                <div class="input-field col s12">
+                <div class="input-field col s12 noOutline">
                     <input type="text" id="categories" name="categories" placeholder="Category"/>
-                    <label for="categories">Category</label>
                 </div>
             </div>
             <div class="row">
