--- a/views/partials/post.hbs
+++ b/views/partials/post.hbs
@@ -14,7 +14,7 @@
                         <li><a href="#" class="btnPostEdit" data-id_post="{{_id}}">Edit</a></li>
                         <li><a href="#" class="btnPostDelete" data-id_post="{{_id}}">Delete</a></li>
                     </ul>
-                    <span class="right">
+                    <span class="right postEditIcon">
                         <a class="dropdown-button" href="#" data-activates="editDropdown_{{_id}}"><i class="material-icons">expand_more</i></a>
                     </span>
                 {{/ifCond}}
