--- a/public/stylesheet/index.css
+++ b/public/stylesheet/index.css
@@ -129,6 +129,12 @@ li.search {
     cursor: pointer;
 }
 
+.postEditIcon {
+    position: absolute;
+    top: 7%;
+    right: 7%;
+}
+
 .container {
     width: 95%
 }
